tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.error
run error: exit status 254
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:119:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:76:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:10:25: Error: The argument type 'double' can't be assigned to the parameter type 'String'.
  var r = (int.parse((c / 65536))) % 256;
                        ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:11:25: Error: The argument type 'double' can't be assigned to the parameter type 'String'.
  var g = (int.parse((c / 256))) % 256;
                        ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:35:26: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      col = (col as num) + 1;
                         ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:38:24: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    row = (row as num) + 1;
                       ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:54:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      x = (x as num) + 1;
                     ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:56:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    y = (y as num) + 1;
                   ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:79:14: Error: Method not found: 'now'.
  var seed = now();
             ^^^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:84:21: Error: The argument type 'num' can't be assigned to the parameter type 'int'.
    seed = nextRand(seed);
                    ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:86:18: Error: The argument type 'num' can't be assigned to the parameter type 'int'.
    SetPxRgb(bm, x, y, 8405024);
                 ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:86:21: Error: The argument type 'num' can't be assigned to the parameter type 'int'.
    SetPxRgb(bm, x, y, 8405024);
                    ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:87:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:94:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      y = (y as num) + 1;
                     ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:99:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      y = (y as num) + 1;
                     ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:101:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    x = (x as num) + 1;
                   ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:108:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      x = (x as num) + 1;
                     ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:113:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      x = (x as num) + 1;
                     ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:115:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    y = (y as num) + 1;
                   ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:120:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:144:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:173:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:178:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/bitmap-ppm-conversion-through-a-pipe.dart:182:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
